--- a/source/themes/tekkie/tekkie/_views/post.html
+++ b/source/themes/tekkie/tekkie/_views/post.html
@@ -1,17 +1,14 @@
 {% extends "default_v4" %}
 
-{% block head_meta %}
-    <meta name="robots" content="index, follow">
-{% endblock %}
-
-{% block content_wrapper %}
-    <article class="card">
+{% block content %}1
+    <article class="card">2
 
     <div class="card-block">
-      <h1 class="card-title">{{ page.title }}</h4>
-      <div class="card-text">{{ page.blocks.content|raw }}</div>
+      <h1 class="card-title">3{{ page.title }}</h1>
+      <hr />4
+      <div class="card-text">5 {{ page.blocks.content|raw }} 6</div>
     </div>
-        
+
     </article>
 
 
@@ -44,7 +41,7 @@
 </noscript>
 {% endif %}
 
-{% endblock %}
+{% endblock content %}
 
 {% block contentSidebar %}
 <div class="card">
@@ -97,4 +94,4 @@
 </div><!-- .row -->
 </div>
 {% endif %}
-{% endblock %}
+{% endblock contentSidebar %}
