--- a/source/themes/tekkie/tekkie/_views/post.html
+++ b/source/themes/tekkie/tekkie/_views/post.html
@@ -1,47 +1,9 @@
 {% extends "default_v4" %}
 
-{% block content %}1
-    <article class="card">2
-
-    <div class="card-block">
-      <h1 class="card-title">3{{ page.title }}</h1>
-      <hr />4
-      <div class="card-text">5 {{ page.blocks.content|raw }} 6</div>
-    </div>
-
-    </article>
-
-
-{% if site.disqus.shortname and site.disqus.shortname != '' %}
-<div id="disqus_thread"></div>
-<script type="text/javascript">
-    /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-    var disqus_shortname = '{{site.disqus.shortname}}'; // required: replace example with your forum shortname
-
-
-    {% if page.disqus.identifier  %}var disqus_identifier = '{{page.disqus.identifier}}'; {% endif %}
-
-    {% if page.disqus.title %}var disqus_title = '{{page.disqus.title}}';{% endif %}
-
-    {% if page.disqus.url %}var disqus_url = '{{page.disqus.url}}';{% endif %}
-
-    {% if page.disqus.category_id %}var disqus_category_id = '{{page.disqus.category_id}}';{% endif %}
-
-    /* * * DON'T EDIT BELOW THIS LINE * * */
-    (function () {
-        var dsq = document.createElement('script');
-        dsq.type = 'text/javascript';
-        dsq.async = true;
-        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-    })();
-</script>
-<noscript>Please enable JavaScript to view the
-    <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered byDisqus.</a>
-</noscript>
-{% endif %}
-
-{% endblock content %}
+{% block post_title %}
+<h1 class="card-title">{{ page.title }}</h1>
+<hr />
+{% endblock post_title %}
 
 {% block contentSidebar %}
 <div class="card">
@@ -73,7 +35,7 @@
 
 
 {% if page.previous_post or page.next_post %}
-<div class="card mt-3 p-3">
+<div class="card mt-3 mb-4 p-3">
 <div class="row">
 <div class="col">
     {%- if page.previous_post -%}
