more about text; small padding on page content

--- a/source/about.html
+++ b/source/about.html
@@ -12,17 +12,23 @@ use:
 <div class="ui vertical stripe text segment">
     <h1>Helping companies since 2011</h1>
     <p>
-    During summer 2011 our founder, Georgiana Gligor, decided to return from rainy Amsterdam to sunny Alba Iulia.
+        During summer 2011 our founder, Georgiana Gligor, decided to return from rainy Amsterdam to sunny Alba Iulia.
+        Here she decided to start a company centered around solving customer's needs, using modern technologies, on a budget.
     </p>
     <p>
-    We love open-source, so the products we create are always stable, high-performing, and with a short time-to-market.
+        Today we are solving business problems with modern Artificial Intelligence tools and techniques.
     </p>
     <p>
-    Our small, well-glued, agile team, is always eager to discover the next challenge.
+        The team has since grown to 6 full-time members, dedicated to learning and solving complex problems.
+        We love open-source, so the products we create are always stable, high-performing, and with a short time-to-market.
     </p>
+    <p>
+        Our small, well-glued, agile team, is always eager to discover the next challenge.
+    </p>
+
     <h2>Organisers of the first Romanian conference dedicated to PHP</h2>
     <p>
-    It's very important to us to give back to the community, so we bring the best European speakers in Cluj-Napoca 
+    It's very important to us to give back to the community, so we brought the best European speakers in Cluj-Napoca
     <a href="https://romaniaphp.ro/">early October 2017 for a PHP geek fest</a>.
     </p>
     <div class="ui center aligned vertical stripe segment">
